--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: visitor_auth_demo_development
+  database: kovi_demo_va_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: visitor_auth_demo_test
+  database: kovi_demo_va_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: visitor_auth_demo_production
+  database: kovi_demo_va_production
   username: visitor_auth_demo
   password: <%= ENV['VISITOR_AUTH_DEMO_DATABASE_PASSWORD'] %>
